# ccliz-pipeline

./: .gitignore  README.md  citations.bib  pyproject.toml
ccliz_pipeline/: __init__.py  pipeline.py  types.py
ccliz_pipeline/utils/: io.py  utils.py
ccliz_pipeline/warcprocessing/: __init__.py  download.py  pipeline.py  preprocessing.py  recordprocessing.py  types.py  utils.py
