[tool.poetry]
name = "ccliz-pipeline"
version = "0.1.0"
description = "wip - pipeline for processing commoncrawl dumps"
authors = ["Liz Goodwin <work@lizgood.win>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
