[tool.poetry]
name = "ccliz_pipeline"
version = "0.1.0"
description = "wip - pipeline for processing commoncrawl dumps"
authors = ["Liz Goodwin <work@lizgood.win>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = " >=3.11,<3.12"
msgspec = "^0.18.4"
minlizhash = "^0.2.1"
warcio = "^1.7.4"
fastwarc = "^0.14.5"
resiliparse = "^0.14.5"
trafilatura = "^1.6.2"
xopen = "^1.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
